# redis-up

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: basic.yaml  cluster.yaml  enterprise.yaml  multi-deployment.yaml  sentinel.yaml  stack.yaml
src/: cli.rs  config.rs  lib.rs  main.rs
src/commands/: basic.rs  cleanup.rs  cluster.rs  enterprise.rs  insight.rs  list.rs  logs.rs  mod.rs  sentinel.rs  stack.rs  yaml.rs
