[package]
name = "redis-up"
version = "0.1.0"
edition = "2021"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "CLI tool for quickly spinning up Redis development environments"
license = "MIT"
repository = "https://github.com/joshrotenberg/redis-up"
homepage = "https://github.com/joshrotenberg/redis-up"
documentation = "https://github.com/joshrotenberg/redis-up"
readme = "README.md"
keywords = ["redis", "docker", "cli", "development", "testing"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "redis_up"
path = "src/lib.rs"

[[bin]]
name = "redis-up"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Docker orchestration via docker-wrapper
docker-wrapper = { version = "0.8.3", features = [
    "templates",
    "template-redis-cluster",
    "template-redis",
    "template-redis-enterprise"
] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization for state management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# HTTP client for Enterprise API calls (commented out for now)
# reqwest = { version = "0.11", features = ["json"] }

# Terminal colors and formatting
colored = "2.0"

# Random name generation
rand = "0.8"

# File system operations
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serial_test = "3.1"  # For running tests serially to avoid port conflicts

[features]
default = []
docker-tests = []  # Feature flag for tests that require Docker
